# codex-xtreme

./: .gitignore  CODEX_XTREME_SIMPLIFIED.md  Cargo.toml  DEPENDENCY_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  run.sh
.github/workflows/: ci.yml
docs/: patches.md
src/: app.rs  core.rs  cpu_detect.rs  lib.rs  main.rs  workflow.rs
src/tui/: mod.rs  theme.rs
src/tui/effects/: glitch.rs  mod.rs  scanlines.rs
src/tui/screens/: boot.rs  build.rs  build_config.rs  cherry_pick.rs  clone.rs  input.rs  mod.rs  patch_select.rs  repo_select.rs  version_select.rs
src/tui/widgets/: list.rs  mod.rs  panel.rs  progress.rs
