[package]
name = "codex-xtreme"
version = "0.1.0"
edition = "2021"
authors = ["Codex Xtreme Contributors"]
description = "Interactive wizard for building optimized, patched Codex binaries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johnzfitch/codex-xtreme"
keywords = ["codex", "cli", "build", "wizard", "patch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Patch system - GitHub dependency for CI; use `path = "../codex-patcher"` locally
codex-patcher = { git = "https://github.com/johnzfitch/codex-patcher", rev = "50f5c71" }

# TUI framework - Neo Tokyo XTREME edition
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "process", "io-util"] }
rand = "0.8"
unicode-width = "0.2"

# Keep cliclack for fallback/simple prompts
cliclack = "0.3"

# Cargo build output parsing
cargo_metadata = "0.18"

# Error handling
anyhow = "1"

# Check for tools (mold, etc)
which = "6"

# Rustc version detection
rustc_version = "0.4"

# Time formatting for repo age
chrono = "0.4"

# Path expansion (~)
shellexpand = "3"

# Optional: colored output outside cliclack
console = "0.15"

# Ctrl-C handling
ctrlc = "3"

# JSON parsing for cargo output
serde_json = "1"

# Config directory paths
dirs = "5"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "codex-xtreme"
path = "src/main.rs"

[[bin]]
name = "cx"
path = "src/bin/cx.rs"
